try to prevent image wrappers too small

--- a/intro.css
+++ b/intro.css
@@ -84,7 +84,8 @@ h2 {
 .image-wrapper {
     position: relative;
     flex: 1;
-    min-height: 0;
+    min-height: 30%; /*TODO*/
+    max-width: 50vw;
     aspect-ratio: 16/9;
     padding: var(--image-padding);
     background-color: var(--box-bg);
@@ -143,6 +144,7 @@ h2 {
 }
 /* bad practice replacing the media query with custom more complex js code,
 but a working rescaling requires it */
+
 @media (max-aspect-ratio: 5/4) {
     .popup {
         aspect-ratio: auto;
